--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
   <section class="section-footer">
     <div class="container">
       <div class="footer-wrapp">
-        <svg width="173" height="72" viewBox="0 0 173 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="logo-position"> <svg class="logo-footer" width="173" height="72" viewBox="0 0 173 72" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_8137_5169)">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M59.5556 16.8889L41.7778 31.1111L36.4444 28.4444L40 13.3333L5.33333 48.8889L0 45.3333L12.4444 19.5556L5.33333 26.6667L0.888889 22.2222L22.2222 0L27.5556 4.44444L15.1111 29.3333L43.5556 0L48.8889 3.55556L44.4444 20.4444L70.2222 0L74.6667 4.44444L54.2222 38.2222L48.8889 35.5556L59.5556 16.8889Z" fill="#EFA201" />
             <path fill-rule="evenodd" clip-rule="evenodd" d="M1.7793 64.8892L67.5571 42.667L69.3349 48.8892L3.55707 71.1114L1.7793 64.8892Z" fill="#EFA201" />
@@ -744,6 +744,9 @@
             </clipPath>
           </defs>
         </svg>
+       
+          <p class="footer-dscr">З нами ви зможете придбати авто напряму, без посередників, у офіційного автодилера. Організовуємо та контролюємо весь процес — від купівлі авто на аукціоні до доставки авто до вашого дому або СТО.</p>
+      </div>
         <div class="footer-lang">
          <button class="ukr">Україна</button> <button class="usa">США</button>
         </div>
