--- a/index.html
+++ b/index.html
@@ -690,27 +690,27 @@
             
             <div class="form-flex-for-desktop">
               <div class="form-group">
-                  <label for="userName">Ваше ім'я <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label>
+                  <!-- <label for="userName">Ваше ім'я <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label> -->
                   <input type="text" id="userName" name="userName" placeholder="Іван Іванов" required autocomplete="name" aria-describedby="userNameError">
                   <div class="error-message" id="userNameError" role="alert"></div>
               </div>
               <div class="form-group">
                 <div class="phone-input-group">
-                  <label for="userPhone">Телефон <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label>
+                  <!-- <label for="userPhone">Телефон <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label> -->
                       <span class="country-flag" aria-hidden="true">
-                      <img class="img-ua" src="./img/UA.png" alt="" width="36" height="24">
+                      <!-- <img class="img-ua" src="./img/UA.png" alt="" width="36" height="24"> -->
                    </span>
                   </div>
                       <input type="tel" id="userPhone" name="userPhone" placeholder="+380 (XX) XXX-XX-XX" required pattern="\+380\s?\(?\d{2}\)?\s?\d{3}-?\d{2}-?\d{2}" title="Введіть номер у форматі +380 (XX) XXX-XX-XX" autocomplete="tel" aria-describedby="userPhoneError">
                   <div class="error-message" id="userPhoneError" role="alert"></div>
               </div>
               <div class="form-group">
-                  <label for="userEmail">Email <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label>
+                  <!-- <label for="userEmail">Email <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label> -->
                   <input type="email" id="userEmail" name="userEmail" placeholder="example@mail.com" required autocomplete="email" aria-describedby="userEmailError">
                   <div class="error-message" id="userEmailError" role="alert"></div>
               </div>
               <div class="form-group">
-                  <label for="userCompany">Компанія</label>
+                  <!-- <label for="userCompany">Компанія</label> -->
                   <input type="text" id="userCompany" name="userCompany" placeholder="Назва вашої компанії" autocomplete="organization" aria-describedby="userCompanyError">
                   <div class="error-message" id="userCompanyError" role="alert"></div> <!-- Залишено для можливих майбутніх валідацій -->
               </div>
