--- a/index.html
+++ b/index.html
@@ -695,12 +695,12 @@
                   <div class="error-message" id="userNameError" role="alert"></div>
               </div>
               <div class="form-group">
-                <div class="phone-input-group">
-                  <!-- <label for="userPhone">Телефон <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label> -->
+                <!-- <div class="phone-input-group">
+                  <label for="userPhone">Телефон <span class="required-star" aria-hidden="true">*</span><span class="visually-hidden">(обов'язково)</span></label>
                       <span class="country-flag" aria-hidden="true">
-                      <!-- <img class="img-ua" src="./img/UA.png" alt="" width="36" height="24"> -->
+                      <img class="img-ua" src="./img/UA.png" alt="" width="36" height="24">
                    </span>
-                  </div>
+                  </div> -->
                       <input type="tel" id="userPhone" name="userPhone" placeholder="+380 (XX) XXX-XX-XX" required pattern="\+380\s?\(?\d{2}\)?\s?\d{3}-?\d{2}-?\d{2}" title="Введіть номер у форматі +380 (XX) XXX-XX-XX" autocomplete="tel" aria-describedby="userPhoneError">
                   <div class="error-message" id="userPhoneError" role="alert"></div>
               </div>
