--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 <!-- -------------------------------------СЕКЦИЯ УСЛУГИ---------------------------------- -->
 
 <section class="service-section" id="uslugi">
-  
+
     <div class="container">
-          <h2 class="subtitle-text">Послуги для вашого бізнесу</h2>
+          <h2 class="subtitle-text-uslugi">Послуги для вашого бізнесу</h2>
 
           <div class="service-wrapper">
             <div class="service-card">
@@ -168,14 +168,14 @@
           
           <div class="service-wrapper">
             <div class="service-card">
-              <h3 class="service-card-text">Розмитнення та сертифікація...</h3>
+              <h3 class="service-card-text">Розмитнення та сертифікація, переробка Title, перевірка застави через офіційні DMV сервіси</h3>
             </div>
             <div class="service-description">Детальна інформація про цю послугу...</div>
           </div>
           
           <div class="service-wrapper">
             <div class="service-card">
-              <h3 class="service-card-text">Гнучка конфігурація послуг...</h3>
+              <h3 class="service-card-text">Гнучка конфігурація послуг — ви обираєте лише те, що потрібно</h3>
             </div>
             <div class="service-description">Детальна інформація про цю послугу...</div>
           </div>
