--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <button class="arrow-btn" id="prevBtn">&lt;</button>
           <button class="arrow-btn" id="nextBtn">&gt;</button>
         </div>
-  
+  </div>
         <div class="perevagi-slider">
           <div class="perevagi-track">
             <!-- Карточка 1 -->
@@ -331,7 +331,7 @@
 
           </div>
         </div>
-      </div>
+      
     </div>
 </section>
   
@@ -857,39 +857,79 @@
 <!-- ПЕРЕВАГИ -->
 
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const track = document.querySelector('.perevagi-track');
-      const cards = document.querySelectorAll('.perevagi-card');
-      const prevBtn = document.getElementById('prevBtn');
-      const nextBtn = document.getElementById('nextBtn');
-  
-      let currentIndex = 0;
-      const cardWidth = cards[0].offsetWidth + 10; // Ширина карточки + margin-right
-      const totalCards = cards.length;
-  
-      function updateSliderPosition() {
-        const offset = -(cardWidth * currentIndex);
-        track.style.transform = `translateX(${offset}px)`;
-      }
-  
-      nextBtn.addEventListener('click', () => {
-        if (currentIndex < totalCards - 1) {
-          currentIndex++;
-        } else {
-          currentIndex = 0; // Зацикливаем
-        }
-        updateSliderPosition();
-      });
-  
-      prevBtn.addEventListener('click', () => {
-        if (currentIndex > 0) {
-          currentIndex--;
-        } else {
-          currentIndex = totalCards - 1; // Зацикливаем
-        }
-        updateSliderPosition();
-      });
-    });
+document.addEventListener('DOMContentLoaded', () => {
+  const track = document.querySelector('.perevagi-track');
+  // Преобразуем NodeList в массив для удобства, хотя для offsetLeft это не строго обязательно
+  const cards = Array.from(document.querySelectorAll('.perevagi-card'));
+  const prevBtn = document.getElementById('prevBtn');
+  const nextBtn = document.getElementById('nextBtn');
+
+  if (!track || cards.length === 0 || !prevBtn || !nextBtn) {
+    console.error('Один или несколько элементов слайдера не найдены!');
+    return;
+  }
+
+  let currentIndex = 0;
+  const totalCards = cards.length;
+
+  function updateSliderPosition() {
+    // Убедимся, что currentIndex находится в допустимых границах
+    if (currentIndex >= 0 && currentIndex < totalCards) {
+      const targetCard = cards[currentIndex];
+      // Смещение будет равно отрицательному значению offsetLeft целевой карточки.
+      // offsetLeft дает расстояние от левого края родительского элемента (трека)
+      // до левого края текущей карточки, учитывая все предыдущие элементы и их margin.
+      const offset = -targetCard.offsetLeft;
+
+      // --- Отладочная информация ---
+      console.log('--- Обновление позиции слайдера ---');
+      console.log('Текущий индекс (currentIndex):', currentIndex);
+      // console.log('Целевая карточка:', targetCard); // Можно раскомментировать для просмотра самого элемента
+      console.log('targetCard.offsetLeft:', targetCard.offsetLeft);
+      console.log('Рассчитанное смещение (offset):', offset);
+      // -----------------------------
+
+      track.style.transform = `translateX(${offset}px)`;
+    } else {
+      // Эта ситуация не должна возникать при правильной логике кнопок, но для безопасности:
+      console.error('Недопустимый currentIndex:', currentIndex);
+    }
+  }
+
+  nextBtn.addEventListener('click', () => {
+    if (currentIndex < totalCards - 1) {
+      currentIndex++;
+    } else {
+      currentIndex = 0; // Зацикливаем на начало
+    }
+    updateSliderPosition();
+  });
+
+  prevBtn.addEventListener('click', () => {
+    if (currentIndex > 0) {
+      currentIndex--;
+    } else {
+      currentIndex = totalCards - 1; // Зацикливаем на конец
+    }
+    updateSliderPosition();
+  });
+
+  // offsetLeft может измениться, если меняется ширина контейнера слайдера
+  // (и, следовательно, ширина карточек, так как у них width: 100%).
+  // Поэтому важно обновлять позицию при изменении размера окна.
+  let resizeTimeout;
+  window.addEventListener('resize', () => {
+    clearTimeout(resizeTimeout);
+    resizeTimeout = setTimeout(() => {
+      console.log('--- Изменение размера окна (вызов updateSliderPosition) ---');
+      updateSliderPosition();
+    }, 250);
+  });
+
+  // Вызываем один раз при загрузке, чтобы слайдер встал на начальную позицию (обычно первую карточку).
+  // Это также гарантирует, что offsetLeft будет рассчитан после полной отрисовки.
+  updateSliderPosition();
+});
   </script>
   
   
