--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         
         <div class="tarifi-box">
             <div class="tarifi-card">
-            <div class="tarifi-icon"><img src="./img/tarifi-icon.png" alt=""></div>
+            <div class="tarifi-icon-box"><img class="tarifi-icon" src="./img/tarifi-icon.png" alt=""></div>
             <div class="tarifi-text">
               <p >30 днів на оплату логістики після завантаження авто
                 в контейнер – ви маєте час, щоб зручно спланувати свій бюджет</p>
@@ -603,13 +603,13 @@
                     </div>
             
                     <div class="tarifi-card">
-            <div class="tarifi-icon"><img src="./img/tarifi-icon.png" alt=""></div>
+            <div class="tarifi-icon-box"><img class="tarifi-icon" src="./img/tarifi-icon.png" alt=""></div>
             <div class="tarifi-text">
               <p >Mожливість об'єднувати платежі за декілька автомобілів – це спрощує облік і знижує кількість зайвих трансакцій;</p>
                     </div>
                     </div>
                     <div class="tarifi-card">
-            <div class="tarifi-icon"><img src="./img/tarifi-icon.png" alt=""></div>
+            <div class="tarifi-icon-box"><img class="tarifi-icon" src="./img/tarifi-icon.png" alt=""></div>
             <div class="tarifi-text">
               <p >Працюємо на умовах, зручних для вас: надаємо до 7 днів на оплату авто після виграшу, індивідуально узгоджуємо графік оплат та маємо унікальні умови SWIFT переказу.</p>
                     </div>
