--- a/index.html
+++ b/index.html
@@ -670,11 +670,11 @@
         <div class="crm-text-box"><p>Кастомізований доступ — налаштування прав для співробітників та партнерів.</p></div>
       </div>
       
+    </div>
       <div class="crm-box-for-desktop">
         <p class="description-crm">Для дилерів авто, які працюють із великими обсягами авто та цінують у власній роботі контроль, швидкість і зручність.</p>
-      </div>
-      <div class="crm-box-for-desktop"><a href="#form" class="crm-btn">Дізнатися більше про CRM</a></div>
-    </div>
+      
+      <a href="#form" class="crm-btn">Дізнатися більше про CRM</a></div>
   </div>
 </section>
 
