--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
       </div>  <!-- footer-wrapp -->
       
       <div class="deepest-box">
-        <span class="deeppest-info-1">2023 © www.zvigerauto.com</span>
+        <span class="deeppest-info-1">2025 © ZvigerAuto. All right reserved</span>
         <div class="deepest-info-2">
          <a href="#">Политика конфіденційності</a>
          <a href="#">Договір оферта</a>
